add news comments tags
